# modern-hello-world

./: README.md
csharp/csharp/: HelloWorldModule.cs
fsharp/: fsharp.sln
fsharp/fsharp/: Server.fs  fsharp.fsproj  packages.config
golang/: server.go
java-spark/: README.md  pom.xml
java-spark/src/com/modern/hello/world/: Main.java
node-js/: server.js
python/: server.py
ruby/src/: server.rb
rust/: Cargo.toml
rust/src/: main.rs
